--- a/Example_Problems_in_Jupyter.ipynb
+++ b/Example_Problems_in_Jupyter.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cf476a3a",
+   "id": "8814b34d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,20 +14,22 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a28fb981",
+   "id": "d9c780e4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Problem 1\n",
     "# define variables\n",
-    "Tables = LpVariable(\"Tables\", 0, None) # Tables>=0\n",
+    "Tables = LpVariable(\"Tables\", 0, None) # Tables>=0  \n",
+    "# The 0 means we can't have negative values, and \n",
+    "# there is no upper bound (we can have as many tables or chairs as possible), no \"None\"\n",
     "Chairs = LpVariable(\"Chairs\", 0, None) # Chairs>=0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a041b8b1",
+   "id": "3c2415a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ac95d945",
+   "id": "4d29536d",
    "metadata": {},
    "outputs": [
     {
@@ -64,13 +66,24 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c98b0e69",
+   "id": "f65ce67d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# define constraints\n",
-    "prob += 2*Tables    +  1*Chairs    <= 12\n",
-    "prob += 2*Tables    +  2*Chairs    <= 18\n",
+    "prob += 2*Tables    +  1*Chairs    <= 12  ## This is the \"big block\" constraint\n",
+    "prob += 2*Tables    +  2*Chairs    <= 18  ## This is the \"small block\" constraint\n",
+    "## For big blocks, we only have 12:\n",
+    "### When making a table, we us 2 big blocks and two small blocks\n",
+    "### When making a chair, we use one big block and two small blocks\n",
+    "\n",
+    "'''\n",
+    "Note:  Tables take 2 big and 2 small blocks; and sell for $16 each\n",
+    "Chairs take 1 big and 2 small blocks; and sell for $10 each\n",
+    "'''\n",
+    "\n",
+    "## For small blockers, we only have 18\n",
+    "\n",
     "# Note, if <= then <=\n",
     "# If >= then >=\n",
     "# If = then =="
@@ -79,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3950d208",
+   "id": "41abe719",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0af97efd",
+   "id": "921d2213",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9e4111bf",
+   "id": "01a6d377",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "153a0490",
+   "id": "43c1de5c",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0465ba8c",
+   "id": "5d2c5ca6",
    "metadata": {},
    "outputs": [],
    "source": []
