finished part 1 of discussion post

--- a/Week 1 Discussion 2 - First LP.ipynb
+++ b/Week 1 Discussion 2 - First LP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "687c2b4b",
+   "id": "068d4a85",
    "metadata": {},
    "source": [
     "### Part 1\n",
@@ -20,65 +20,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "05c45bd2",
+   "execution_count": 49,
+   "id": "9c13d378",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pulp import LpVariable, LpProblem, LpMaximize, LpStatus, value, LpMinimize"
+    "from pulp import LpVariable, LpProblem, LpMaximize, LpStatus, value, LpMinimize, PULP_CBC_CMD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "825ae71e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define variables - these are our decision variables representing how many FTEs to employ\n",
-    "MDs = LpVariable(\"MDs\", 0, None) # MDs>=0  \n",
-    "# The 0 means we can't have negative values, and there is no upper bound  so \"None\"\n",
-    "NPs = LpVariable(\"NPs\", 0, None) # NPs>=0\n",
-    "PAs = LpVariable(\"PAs\", 0, None) # PAs>=0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "4875ba80",
+   "execution_count": 50,
+   "id": "e413687a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome to the CBC MILP Solver \n",
-      "Version: 2.10.3 \n",
-      "Build Date: Dec 15 2019 \n",
-      "\n",
-      "command line - /Users/robords/.venv/basic_linear_programming/lib/python3.9/site-packages/pulp/solverdir/cbc/osx/64/cbc /var/folders/c0/r6mf3b4n5w72sdb037sthl840000gn/T/16b37ba75e6f4ce894156fd7e5a0898e-pulp.mps timeMode elapsed branch printingOptions all solution /var/folders/c0/r6mf3b4n5w72sdb037sthl840000gn/T/16b37ba75e6f4ce894156fd7e5a0898e-pulp.sol (default strategy 1)\n",
-      "At line 2 NAME          MODEL\n",
-      "At line 3 ROWS\n",
-      "At line 11 COLUMNS\n",
-      "At line 26 RHS\n",
-      "At line 33 BOUNDS\n",
-      "At line 34 ENDATA\n",
-      "Problem MODEL has 6 rows, 3 columns and 11 elements\n",
-      "Coin0008I MODEL read with 0 errors\n",
-      "Option for timeMode changed from cpu to elapsed\n",
-      "Presolve 3 (-3) rows, 3 (0) columns and 8 (-3) elements\n",
-      "0  Obj 0 Primal inf 9.999999 (1)\n",
-      "3  Obj 1206.6667\n",
-      "Optimal - objective value 1206.6667\n",
-      "After Postsolve, objective 1206.6667, infeasibilities - dual 0 (0), primal 0 (0)\n",
-      "Optimal objective 1206.666667 - 3 iterations time 0.002, Presolve 0.00\n",
-      "Option for printingOptions changed from normal to all\n",
-      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.00\n",
+      "Week 1 Discussion 2 - First LP\n",
+      "status=Optimal\n",
+      "MDs = 3.3333333\n",
+      "NPs = 4.0\n",
+      "PAs = 2.6666667\n",
+      "Objective = 1206.666665\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "# define variables - these are our decision variables representing how many FTEs to employ\n",
+    "MDs = LpVariable(\"MDs\", 0, None) # MDs>=0  \n",
+    "# The 0 means we can't have negative values, and there is no upper bound  so \"None\"\n",
+    "NPs = LpVariable(\"NPs\", 0, None) # NPs>=0\n",
+    "PAs = LpVariable(\"PAs\", 0, None) # PAs>=0\n",
+    "\n",
     "# defines the problem type\n",
     "prob = LpProblem(\"problem\", LpMinimize)\n",
     "\n",
@@ -95,30 +71,9 @@
     "prob += (PAs >= 0, \"PA Non-negative Constraint\")\n",
     "\n",
     "# solve the problem\n",
-    "status = prob.solve()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "c625acfb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Problem 1\n",
-      "status=Optimal\n",
-      "MDs = 3.3333333\n",
-      "NPs = 4.0\n",
-      "PAs = 2.6666667\n",
-      "Objective = 1206.666665\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
+    "status = prob.solve(PULP_CBC_CMD(msg=0))\n",
+    "\n",
+    "\n",
     "print(f\"Week 1 Discussion 2 - First LP\")\n",
     "print(f\"status={LpStatus[status]}\")\n",
     "\n",
@@ -129,24 +84,6 @@
     "print(f\"Objective = {value(prob.objective)}\")\n",
     "print(f\"\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bc355525",
-   "metadata": {},
-   "source": [
-    "### Part 2  \n",
-    "\n",
-    "How should we view and use math programming as part of our analytics portfolio?  How might we combine prescriptive analytics with predictive and descriptive analytics?  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9326f969",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
