--- a/Example_Problems_in_Jupyter.ipynb
+++ b/Example_Problems_in_Jupyter.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "8814b34d",
+   "execution_count": 16,
+   "id": "6ca7e96e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import pulp\n",
-    "from pulp import LpVariable, LpProblem, LpMaximize, LpStatus, value, LpMinimize"
+    "from pulp import LpVariable, LpProblem, LpMaximize, LpStatus, value, LpMinimize, PULP_CBC_CMD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "d9c780e4",
+   "execution_count": 17,
+   "id": "a0224988",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "3c2415a5",
+   "execution_count": 18,
+   "id": "3cadd329",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "4d29536d",
+   "execution_count": 19,
+   "id": "127977af",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "VARIABLES"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,10 +65,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "f65ce67d",
+   "execution_count": 20,
+   "id": "77979a02",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nNote:  Tables take 2 big and 2 small blocks; and sell for $16 each\\nChairs take 1 big and 2 small blocks; and sell for $10 each\\n'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# define constraints\n",
     "prob += 2*Tables    +  1*Chairs    <= 12  ## This is the \"big block\" constraint\n",
@@ -91,8 +102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "41abe719",
+   "execution_count": 21,
+   "id": "88c1fab5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,37 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "921d2213",
+   "execution_count": 22,
+   "id": "433a152c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome to the CBC MILP Solver \n",
-      "Version: 2.10.3 \n",
-      "Build Date: Dec 15 2019 \n",
-      "\n",
-      "command line - /Users/robords/.venv/basic_linear_programming/lib/python3.9/site-packages/pulp/solverdir/cbc/osx/64/cbc /var/folders/c0/r6mf3b4n5w72sdb037sthl840000gn/T/5075ac2507d542dc85f625a41f9a832c-pulp.mps max timeMode elapsed branch printingOptions all solution /var/folders/c0/r6mf3b4n5w72sdb037sthl840000gn/T/5075ac2507d542dc85f625a41f9a832c-pulp.sol (default strategy 1)\n",
-      "At line 2 NAME          MODEL\n",
-      "At line 3 ROWS\n",
-      "At line 7 COLUMNS\n",
-      "At line 14 RHS\n",
-      "At line 17 BOUNDS\n",
-      "At line 18 ENDATA\n",
-      "Problem MODEL has 2 rows, 2 columns and 4 elements\n",
-      "Coin0008I MODEL read with 0 errors\n",
-      "Option for timeMode changed from cpu to elapsed\n",
-      "Presolve 2 (0) rows, 2 (0) columns and 4 (0) elements\n",
-      "0  Obj -0 Dual inf 26 (2)\n",
-      "0  Obj -0 Dual inf 26 (2)\n",
-      "2  Obj 108\n",
-      "Optimal - objective value 108\n",
-      "Optimal objective 108 - 2 iterations time 0.002\n",
-      "Option for printingOptions changed from normal to all\n",
-      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.02\n",
-      "\n",
       "Problem 1\n",
       "status=Optimal\n",
       "Chairs = 6.0\n",
@@ -144,7 +132,7 @@
    ],
    "source": [
     "# solve the problem\n",
-    "status = prob.solve()\n",
+    "status = prob.solve(PULP_CBC_CMD(msg=0))\n",
     "print(f\"Problem 1\")\n",
     "print(f\"status={LpStatus[status]}\")\n",
     "\n",
@@ -159,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "01a6d377",
+   "id": "37426a86",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "43c1de5c",
+   "id": "5f8d13cd",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d2c5ca6",
+   "id": "625f42a3",
    "metadata": {},
    "outputs": [],
    "source": []
