--- a/Week 1 Discussion 2 - First LP.ipynb
+++ b/Week 1 Discussion 2 - First LP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "068d4a85",
+   "id": "2287807b",
    "metadata": {},
    "source": [
     "### Part 1\n",
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "9c13d378",
+   "id": "80eb3af4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "e413687a",
+   "execution_count": 51,
+   "id": "51696ca6",
    "metadata": {},
    "outputs": [
     {
@@ -82,8 +82,66 @@
     "    print(f\"{variable.name} = {variable.varValue}\")\n",
     "    \n",
     "print(f\"Objective = {value(prob.objective)}\")\n",
-    "print(f\"\")"
+    "print(f\"\")\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "1b366464",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of MDs: 3.3333333\n",
+      "Number of NPs: 4.0\n",
+      "Number of PAs: 2.6666667\n",
+      "Optimal solution: $1206.67\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pulp\n",
+    "\n",
+    "# Create the linear programming problem\n",
+    "lp_problem = pulp.LpProblem('Staffing', pulp.LpMinimize)\n",
+    "\n",
+    "# Define the decision variables\n",
+    "x = pulp.LpVariable('x', lowBound=0)  # Number of MDs\n",
+    "y = pulp.LpVariable('y', lowBound=0)  # Number of NPs\n",
+    "z = pulp.LpVariable('z', lowBound=0)  # Number of PAs\n",
+    "\n",
+    "# Set the objective function\n",
+    "lp_problem += 150 * x + 110 * y + 100 * z\n",
+    "\n",
+    "# Add the constraints\n",
+    "lp_problem += x + y + z >= 10\n",
+    "lp_problem += 1.5 * z <= y\n",
+    "lp_problem += 2 * x >= y + z\n",
+    "\n",
+    "# Solve the linear programming problem using the GLPK solver\n",
+    "lp_problem.solve(solver=PULP_CBC_CMD(msg=0))\n",
+    "\n",
+    "# Print the results\n",
+    "print(f'Number of MDs: {x.value()}')\n",
+    "print(f'Number of NPs: {y.value()}')\n",
+    "print(f'Number of PAs: {z.value()}')\n",
+    "\n",
+    "# Print the optimal solution\n",
+    "print(f'Optimal solution: ${pulp.value(lp_problem.objective):.2f}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a299fe9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
