--- a/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
+++ b/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "98882d50",
+   "id": "d0d5603b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "502af0a5",
+   "id": "1b0682d7",
    "metadata": {},
    "source": [
     "## Question 1: \n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "85860b4d",
+   "id": "ace52fc8",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff05237f",
+   "id": "28151f49",
    "metadata": {},
    "source": [
     "## Question 2: \n",
@@ -141,8 +141,7 @@
     "\n",
     "__Max__    \n",
     "Z = -4x<sub>1</sub> + 2x<sub>2</sub>\n",
-    "\n",
-    "&check; Must be a maximization problem\n",
+    "&check; Must be a maximization problem &check;\n",
     "\n",
     "__Subject To__\n",
     "\n",
@@ -150,7 +149,10 @@
     "x<sub>1</sub> + s<sub>2</sub> = 2     (added a surplus variable)    \n",
     "x<sub>1</sub> - 4x<sub>2</sub> + s<sub>3</sub> = 0     (added a slack variable)    \n",
     "2x<sub>1</sub> + 2x<sub>2</sub> + s<sub>4</sub> = 10   (added a surplus variable)      \n",
-    "x<sub>1</sub>, x<sub>2</sub>, s<sub>1</sub>, s<sub>2</sub>, s<sub>3</sub>, s<sub>4</sub> ≥ 0    \n",
+    "&check; All functional constraints in non-negative form &check;\n",
+    "\n",
+    "x<sub>1</sub>, x<sub>2</sub>, s<sub>1</sub>, s<sub>2</sub>, s<sub>3</sub>, s<sub>4</sub> ≥ 0   \n",
+    "&check; Variables must be non-negative &check;\n",
     " \n",
     "\n",
     " \n",
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f3b8450",
+   "id": "1ce353f7",
    "metadata": {},
    "source": [
     "## Question 3: \n",
@@ -178,16 +180,162 @@
     "| 1 | 400 | 600  |\n",
     "| 2 | 800 | 500  |\n",
     "| 3 | 300 | 500  |\n",
-    "| 4 | 300 | 250  |"
+    "| 4 | 300 | 250  |\n",
+    "\n",
+    "\n",
+    "Regarding Question 3, the objective is to maximize the amount of cash on hand at the beginning of Period 5.  (Not necessarily to maximize profit.)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5948018",
+   "id": "10cd4780",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Set up the variables\n",
+    "month_1_point_1 = LpVariable(\"Cash to Invest Month 1 at 0.1% for one month\", 0, None)\n",
+    "month_1_point_5 = LpVariable(\"Cash to Invest Month 1 at 0.5% for two months\", 0, None)\n",
+    "month_1_1 = LpVariable(\"Cash to Invest Month 1 at 1% for three months\", 0, None)\n",
+    "month_1_2 = LpVariable(\"Cash to Invest Month 1 at 2% for four months\", 0, None)\n",
+    "\n",
+    "month_2_point_1 = LpVariable(\"Cash to Invest Month 2 at 0.1% for one month\", 0, None)\n",
+    "month_2_point_5 = LpVariable(\"Cash to Invest Month 2 at 0.5% for two months\", 0, None)\n",
+    "month_2_1 = LpVariable(\"Cash to Invest Month 2 at 1% for three months\", 0, None)\n",
+    "month_2_2 = LpVariable(\"Cash to Invest Month 2 at 2% for four months\", 0, None)\n",
+    "\n",
+    "month_3_point_1 = LpVariable(\"Cash to Invest Month 3 at 0.1% for one month\", 0, None)\n",
+    "month_3_point_5 = LpVariable(\"Cash to Invest Month 3 at 0.5% for two months\", 0, None)\n",
+    "month_3_1 = LpVariable(\"Cash to Invest Month 3 at 1% for three months\", 0, None)\n",
+    "month_3_2 = LpVariable(\"Cash to Invest Month 3 at 2% for four months\", 0, None)\n",
+    "\n",
+    "month_4_point_1 = LpVariable(\"Cash to Invest Month 4 at 0.1% for one month\", 0, None)\n",
+    "month_4_point_5 = LpVariable(\"Cash to Invest Month 4 at 0.5% for two months\", 0, None)\n",
+    "month_4_1 = LpVariable(\"Cash to Invest Month 4 at 1% for three months\", 0, None)\n",
+    "month_4_2 = LpVariable(\"Cash to Invest Month 4 at 2% for four months\", 0, None)\n",
+    "\n",
+    "# Objective Function Type\n",
+    "sc = LpProblem(\"Finco Investing Problem\", LpMaximize)\n",
+    "\n",
+    "# Objective Function\n",
+    "sc += (month_1_point_1 + month_1_point_5 + month_1_1 + month_1_2 +\n",
+    "       month_2_point_1 + month_2_point_5 + month_2_1 + month_2_2 +\n",
+    "       month_3_point_1 + month_3_point_5 + month_3_1 + month_3_2 + \n",
+    "       month_4_point_1 + month_4_point_5 + month_4_1 + month_4_2, \"Total Cash on Hand in Month 5\")\n",
+    "\n",
+    "# Constraints\n",
+    "# Money left to invest\n",
+    "sc += (1.1*month_1_point_1 + month_1_point_5 + month_1_1 + month_1_2 <= 600-400, \n",
+    "         \"Month 1 leaves 200 left to invest\")\n",
+    "sc += (1.1*month_2_point_1 + month_2_point_5 + month_2_1 + month_2_2 <= 800-500, \n",
+    "         \"Month 2 leaves 300 left to invest\")\n",
+    "sc += (1.1*month_3_point_1 + month_3_point_5 + month_3_1 + month_3_2 <= 300-500, \n",
+    "         \"Month 3 leaves -200 left to invest\")\n",
+    "sc += (1.1*month_4_point_1 + month_4_point_5 + month_4_1 + month_4_2 <= 300-250, \n",
+    "         \"Month 4 leaves 50 left to invest\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Greater than 0 constraints\n",
+    "sc += (steel_1_mill_1 >= 0, \"Steel 1 Mill 1 Non-negative Constraint\")\n",
+    "sc += (steel_2_mill_1 >= 0, \"Steel 2 Mill 1 Non-negative Constraint\")\n",
+    "sc += (steel_3_mill_1 >= 0, \"Steel 3 Mill 1 Non-negative Constraint\")\n",
+    "sc += (steel_1_mill_2 >= 0, \"Steel 1 Mill 2 Non-negative Constraint\")\n",
+    "sc += (steel_2_mill_2 >= 0, \"Steel 2 Mill 2 Non-negative Constraint\")\n",
+    "sc += (steel_3_mill_2 >= 0, \"Steel 3 Mill 2 Non-negative Constraint\")\n",
+    "\n",
+    "# Solve the problem\n",
+    "status = sc.solve(PULP_CBC_CMD(msg=0))\n",
+    "\n",
+    "# Print the solution\n",
+    "print(f\"Status: {LpStatus[status]}\")\n",
+    "print(f\"Minimum cost: {'${:,.2f}'.format(value(sc.objective))}\")  ## formats automatically with commas at thou\n",
+    "for v in sc.variables():\n",
+    "    print(f'{v.name} = {v.varValue + 0}') # + 0 ensures no negative zeros"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "defa61ce",
+   "metadata": {},
+   "source": [
+    "## Question 4: \n",
+    "\n",
+    "Turkeyco produces two types of turkey cutlets for sale to fast-food restaurants.  Each type of cutlet \n",
+    "consists of white meat and dark meat.  Cutlet 1 sells for \\\\$4/lb and must consist of at least 70\\% white \n",
+    "meat.  Cutlet 2 sells for \\\\$3/lb and must consist of at least 60\\% white meat.  At most, 50 lb of cutlet 1 and \n",
+    "30 lb of cutlet 2 can be sold.  The two types of turkey used to manufacture the cutlets are purchased from \n",
+    "the GobbleGobble Turkey Farm.  Each type 1 turkey costs \\\\$10 and yields 5 lb of white meat and 2 lb of \n",
+    "dark meat.  Each type 2 turkey costs \\\\$8 and yields 3 lb of white meat and 3 lb of dark meat.   \n",
+    " \n",
+    "Part A:  Formulate an LP to maximize Turkeyco’s profit. \n",
+    " \n",
+    "Part B:  Solve the LP (provide exact values for all variables and the optimal objective function). \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80f3e27d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set up the variables\n",
+    "cutlet_1 = LpVariable(\"Cutlet_1_Produced\", 0, None)\n",
+    "cutlet_2 = LpVariable(\"Cutlet_2_Produced\", 0, None)\n",
+    "\n",
+    "type_1_turkey = LpVariable(\"Type_1_Turkey\", 0, None)\n",
+    "type_2_turkey = LpVariable(\"Type_2_Turkey\", 0, None)\n",
+    "\n",
+    "# Objective Function Type\n",
+    "sc = LpProblem(\"Turkeyco Profit Problem\", LpMaximize)\n",
+    "\n",
+    "# Objective Function\n",
+    "sc += ((4*cutlet_1 + 3*cutlet_2) - (10*type_1_turkey + 8*type_2_turkey), \"Total Profit\")\n",
+    "\n",
+    "# Constraints\n",
+    "#White meat percentage\n",
+    "sc += (5*type_1_turkey + 3*type_2_turkey <= .7*cutlet_1,\n",
+    "         \"Cutlet 1 must consist of at least 70% white meat\")\n",
+    "sc += (5*type_1_turkey + 3*type_2_turkey <= .6*cutlet_2,\n",
+    "         \"Cutlet 2 must consist of at least 60% white meat\")\n",
+    "\n",
+    "\n",
+    "### WIP\n",
+    "\n",
+    "## Each month, SteelCo must manufacture a total of at least 400 tons of Steel 1, \n",
+    "## 500 tons of Steel 2, and 300 tons of Steel 3 to meet demand\n",
+    "sc += (1*steel_1_mill_1 + 1*steel_1_mill_2 >= 400, \"Steel 1 Manufactured\")\n",
+    "sc += (1*steel_2_mill_1 + 1*steel_2_mill_2 >= 500, \"Steel 2 Manufactured\")\n",
+    "sc += (1*steel_3_mill_1 + 1*steel_3_mill_2 >= 300, \"Steel 3 Manufactured\")\n",
+    "\n",
+    "## the total amount of Steel 2 manufactured should not exceed the combined amount of Steel 1 and Steel 3\n",
+    "sc += (steel_2_mill_1 + steel_2_mill_2 <= steel_1_mill_1 + steel_1_mill_2 + steel_3_mill_1 + steel_3_mill_2, \n",
+    "       \"Steel 2 should not exceed the combined amount of Steel 1 and Steel 3\")\n",
+    "\n",
+    "## Also, in order to maintain a roughly uniform usage of the two mills, management’s policy is that\n",
+    "## the percentage of available blast furnace capacity (time) used at each mill should be the same.\n",
+    "sc += ((0.1*steel_1_mill_1 + 0.11*steel_2_mill_1 + 0.14*steel_3_mill_1) == \n",
+    "       (0.08*steel_1_mill_2 + 0.06*steel_2_mill_2 + 0.1*steel_3_mill_2), \n",
+    "         \"Uniform usage of the two mills\")\n",
+    "\n",
+    "## Greater than 0 constraints\n",
+    "sc += (steel_1_mill_1 >= 0, \"Steel 1 Mill 1 Non-negative Constraint\")\n",
+    "sc += (steel_2_mill_1 >= 0, \"Steel 2 Mill 1 Non-negative Constraint\")\n",
+    "sc += (steel_3_mill_1 >= 0, \"Steel 3 Mill 1 Non-negative Constraint\")\n",
+    "sc += (steel_1_mill_2 >= 0, \"Steel 1 Mill 2 Non-negative Constraint\")\n",
+    "sc += (steel_2_mill_2 >= 0, \"Steel 2 Mill 2 Non-negative Constraint\")\n",
+    "sc += (steel_3_mill_2 >= 0, \"Steel 3 Mill 2 Non-negative Constraint\")\n",
+    "\n",
+    "# Solve the problem\n",
+    "status = sc.solve(PULP_CBC_CMD(msg=0))\n",
+    "\n",
+    "# Print the solution\n",
+    "print(f\"Status: {LpStatus[status]}\")\n",
+    "print(f\"Minimum cost: {'${:,.2f}'.format(value(sc.objective))}\")  ## formats automatically with commas at thou\n",
+    "for v in sc.variables():\n",
+    "    print(f'{v.name} = {v.varValue + 0}') # + 0 ensures no negative zeros"
+   ]
   }
  ],
  "metadata": {
