--- a/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
+++ b/Homework_Assignment_1_Decision_Analysis_and_Formulation_and_Solving_LPs.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d0d5603b",
+   "id": "479d3054",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b0682d7",
+   "id": "853d1c92",
    "metadata": {},
    "source": [
     "## Question 1: \n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ace52fc8",
+   "id": "be2c9f7d",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28151f49",
+   "id": "dacdee0b",
    "metadata": {},
    "source": [
     "## Question 2: \n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ce353f7",
+   "id": "8bd7f9fa",
    "metadata": {},
    "source": [
     "## Question 3: \n",
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10cd4780",
+   "id": "7ca5cae6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "defa61ce",
+   "id": "eed8698e",
    "metadata": {},
    "source": [
     "## Question 4: \n",
@@ -275,67 +275,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "80f3e27d",
+   "execution_count": 31,
+   "id": "be505e98",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status: Optimal\n",
+      "Maximum Profit: $176.00\n",
+      "Cutlet_1_Dark_Meat_Produced = 15.0\n",
+      "Cutlet_1_White_Meat_Produced = 35.0\n",
+      "Cutlet_2_Dark_Meat_Produced = 12.0\n",
+      "Cutlet_2_White_Meat_Produced = 18.0\n",
+      "Type_1_Turkey_Bought = 9.0\n",
+      "Type_2_Turkey_Bought = 3.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/robords/.venv/basic_linear_programming/lib/python3.9/site-packages/pulp/pulp.py:1352: UserWarning: Spaces are not permitted in the name. Converted to '_'\n",
+      "  warnings.warn(\"Spaces are not permitted in the name. Converted to '_'\")\n"
+     ]
+    }
+   ],
    "source": [
     "# Set up the variables\n",
-    "cutlet_1 = LpVariable(\"Cutlet_1_Produced\", 0, None)\n",
-    "cutlet_2 = LpVariable(\"Cutlet_2_Produced\", 0, None)\n",
+    "cutlet_1_white = LpVariable(\"Cutlet_1_White_Meat_Produced\", 0, None)\n",
+    "cutlet_1_dark = LpVariable(\"Cutlet_1_Dark_Meat_Produced\", 0, None)\n",
+    "cutlet_2_white = LpVariable(\"Cutlet_2_White_Meat_Produced\", 0, None)\n",
+    "cutlet_2_dark = LpVariable(\"Cutlet_2_Dark_Meat_Produced\", 0, None)\n",
     "\n",
-    "type_1_turkey = LpVariable(\"Type_1_Turkey\", 0, None)\n",
-    "type_2_turkey = LpVariable(\"Type_2_Turkey\", 0, None)\n",
+    "type_1_turkey = LpVariable(\"Type_1_Turkey_Bought\", 0, None, cat=\"Integer\")\n",
+    "type_2_turkey = LpVariable(\"Type_2_Turkey_Bought\", 0, None, cat=\"Integer\")\n",
     "\n",
     "# Objective Function Type\n",
     "sc = LpProblem(\"Turkeyco Profit Problem\", LpMaximize)\n",
     "\n",
     "# Objective Function\n",
-    "sc += ((4*cutlet_1 + 3*cutlet_2) - (10*type_1_turkey + 8*type_2_turkey), \"Total Profit\")\n",
+    "sc += ((4*(cutlet_1_white + cutlet_1_dark) + 3*(cutlet_2_white + cutlet_2_dark)) - \n",
+    "       (10*type_1_turkey + 8*type_2_turkey), \"Total Profit\")\n",
     "\n",
     "# Constraints\n",
     "#White meat percentage\n",
-    "sc += (5*type_1_turkey + 3*type_2_turkey <= .7*cutlet_1,\n",
+    "sc += (cutlet_1_white >= .7*(cutlet_1_white + cutlet_1_dark),\n",
     "         \"Cutlet 1 must consist of at least 70% white meat\")\n",
-    "sc += (5*type_1_turkey + 3*type_2_turkey <= .6*cutlet_2,\n",
+    "sc += (cutlet_2_white >= .6*(cutlet_2_white + cutlet_2_dark),\n",
     "         \"Cutlet 2 must consist of at least 60% white meat\")\n",
     "\n",
+    "#Turkey Meat Types\n",
+    "sc += (5*type_1_turkey + 3*type_2_turkey >= cutlet_1_white + cutlet_2_white,\n",
+    "         \"Turkey 1 yields 5 lb of white meat and 2 yields 3 lb of white meat\")\n",
+    "sc += (2*type_1_turkey + 3*type_2_turkey >= cutlet_1_dark + cutlet_2_dark,\n",
+    "         \"Turkey 1 yields 2 lb of dark meat and 2 yields 3 lb of dark meat\")\n",
     "\n",
-    "### WIP\n",
-    "\n",
-    "## Each month, SteelCo must manufacture a total of at least 400 tons of Steel 1, \n",
-    "## 500 tons of Steel 2, and 300 tons of Steel 3 to meet demand\n",
-    "sc += (1*steel_1_mill_1 + 1*steel_1_mill_2 >= 400, \"Steel 1 Manufactured\")\n",
-    "sc += (1*steel_2_mill_1 + 1*steel_2_mill_2 >= 500, \"Steel 2 Manufactured\")\n",
-    "sc += (1*steel_3_mill_1 + 1*steel_3_mill_2 >= 300, \"Steel 3 Manufactured\")\n",
-    "\n",
-    "## the total amount of Steel 2 manufactured should not exceed the combined amount of Steel 1 and Steel 3\n",
-    "sc += (steel_2_mill_1 + steel_2_mill_2 <= steel_1_mill_1 + steel_1_mill_2 + steel_3_mill_1 + steel_3_mill_2, \n",
-    "       \"Steel 2 should not exceed the combined amount of Steel 1 and Steel 3\")\n",
-    "\n",
-    "## Also, in order to maintain a roughly uniform usage of the two mills, management’s policy is that\n",
-    "## the percentage of available blast furnace capacity (time) used at each mill should be the same.\n",
-    "sc += ((0.1*steel_1_mill_1 + 0.11*steel_2_mill_1 + 0.14*steel_3_mill_1) == \n",
-    "       (0.08*steel_1_mill_2 + 0.06*steel_2_mill_2 + 0.1*steel_3_mill_2), \n",
-    "         \"Uniform usage of the two mills\")\n",
+    "#At most, 50 lb of cutlet 1 and 30 lb of cutlet 2 can be sold\n",
+    "sc += (cutlet_1_white + cutlet_1_dark <= 50,\n",
+    "         \"50 lb of cutlet 1 can be sold\")\n",
+    "sc += (cutlet_2_white + cutlet_2_dark <= 30,\n",
+    "         \"30 lb of cutlet 2 can be sold\")\n",
     "\n",
     "## Greater than 0 constraints\n",
-    "sc += (steel_1_mill_1 >= 0, \"Steel 1 Mill 1 Non-negative Constraint\")\n",
-    "sc += (steel_2_mill_1 >= 0, \"Steel 2 Mill 1 Non-negative Constraint\")\n",
-    "sc += (steel_3_mill_1 >= 0, \"Steel 3 Mill 1 Non-negative Constraint\")\n",
-    "sc += (steel_1_mill_2 >= 0, \"Steel 1 Mill 2 Non-negative Constraint\")\n",
-    "sc += (steel_2_mill_2 >= 0, \"Steel 2 Mill 2 Non-negative Constraint\")\n",
-    "sc += (steel_3_mill_2 >= 0, \"Steel 3 Mill 2 Non-negative Constraint\")\n",
+    "sc += (cutlet_1_white >= 0, \"Cutlet 1 White Non-negative Constraint\")\n",
+    "sc += (cutlet_1_dark >= 0, \"Cutlet 1 Dark Non-negative Constraint\")\n",
+    "sc += (cutlet_2_white >= 0, \"Cutlet 2 White Non-negative Constraint\")\n",
+    "sc += (cutlet_2_dark >= 0, \"Cutlet 2 Dark Non-negative Constraint\")\n",
+    "sc += (type_1_turkey >= 0, \"Turkey 1 Non-negative Constraint\")\n",
+    "sc += (type_2_turkey >= 0, \"Turkey 2 Non-negative Constraint\")\n",
     "\n",
     "# Solve the problem\n",
     "status = sc.solve(PULP_CBC_CMD(msg=0))\n",
     "\n",
     "# Print the solution\n",
     "print(f\"Status: {LpStatus[status]}\")\n",
-    "print(f\"Minimum cost: {'${:,.2f}'.format(value(sc.objective))}\")  ## formats automatically with commas at thou\n",
+    "print(f\"Maximum Profit: {'${:,.2f}'.format(value(sc.objective))}\")  ## formats automatically with commas at thou\n",
     "for v in sc.variables():\n",
     "    print(f'{v.name} = {v.varValue + 0}') # + 0 ensures no negative zeros"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33e26adf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
